Remove bad CallJavascriptFunctionUnsafe call from PrintPreviewUI

"cancelPendingPrintRequest" does not actually exist. Remove the call to
this function from the PrintPreviewUI.

BUG=740264

Review-Url: https://codereview.chromium.org/2974183002
Cr-Commit-Position: refs/heads/master@{#485982}

Former-commit-id: a9e19eb6164aaa02e60c685a97fe4c579d0d03cb