chrome/browser/ui/webui/print_preview/print_preview_handler.cc
@@ -1594,6 +1594,10 @@ void PrintPreviewHandler::OnPrintPreviewCancelled() {
   preview_callbacks_.pop();
 }
 
+void PrintPreviewHandler::OnPrintRequestCancelled() {
+  HandleCancelPendingPrintRequest(nullptr);
+}
+
 #if BUILDFLAG(ENABLE_BASIC_PRINT_DIALOG)
 void PrintPreviewHandler::ShowSystemDialog() {
   HandleShowSystemDialog(NULL);
